[gd_scene load_steps=12 format=3 uid="uid://dn0ix4b441bgr"]

[ext_resource type="Theme" uid="uid://ctsh3cgr6x55w" path="res://src/scenes/uiElements/Pusab_Font.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://c8pv7gaik45on" path="res://assets/guiTextures/Restart.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bl42tu2x7ynta" path="res://assets/guiTextures/ContinuePlaying.png" id="5"]
[ext_resource type="Theme" uid="uid://egspkbwxefg2" path="res://src/scenes/uiElements/GuiElementsTheme.tres" id="6"]
[ext_resource type="Texture2D" uid="uid://dw2vp18jawftk" path="res://assets/guiTextures/GoBackToMenu.png" id="7"]
[ext_resource type="PackedScene" uid="uid://cqslxljwyr3r6" path="res://src/scenes/uiElements/FadeScreen.tscn" id="8"]
[ext_resource type="Script" path="res://src/scenes/uiElements/clickable_button.gd" id="8_uu60r"]
[ext_resource type="FontFile" uid="uid://3d5l6qp0iyr" path="res://assets/fonts/PUSAB___.otf" id="9"]
[ext_resource type="Script" path="res://src/scenes/PauseMenu.gd" id="10"]
[ext_resource type="AudioStream" uid="uid://bbqvf1ujobh0o" path="res://assets/audio/soundEffects/quitSound_01.ogg" id="11"]

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("9")])
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/75/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
theme = ExtResource("3")
script = ExtResource("10")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.392157)

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -790.0
offset_top = -398.0
offset_right = 790.0
offset_bottom = 398.0
alignment = 1

[node name="Labels" type="VBoxContainer" parent="Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Labels"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3")
theme_override_fonts/font = SubResource("1")
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelName" type="Label" parent="Menu/Labels"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3")
text = "Level Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_vertical = 5
theme = ExtResource("6")
alignment = 1

[node name="Restart" type="Button" parent="Menu/Buttons"]
layout_mode = 2
icon = ExtResource("4")
flat = true
script = ExtResource("8_uu60r")

[node name="ContinuePlaying" type="Button" parent="Menu/Buttons"]
layout_mode = 2
icon = ExtResource("5")
flat = true
script = ExtResource("8_uu60r")

[node name="GoBackToMenu" type="Button" parent="Menu/Buttons"]
layout_mode = 2
icon = ExtResource("7")
flat = true
script = ExtResource("8_uu60r")

[node name="FadeScreen" parent="." instance=ExtResource("8")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="QuitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11")

[connection signal="button_down" from="Menu/Buttons/Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_up" from="Menu/Buttons/Restart" to="." method="_on_Restart_button_up"]
[connection signal="button_down" from="Menu/Buttons/ContinuePlaying" to="." method="_on_ContinuePlaying_button_down"]
[connection signal="button_up" from="Menu/Buttons/ContinuePlaying" to="." method="_on_ContinuePlaying_button_up"]
[connection signal="button_down" from="Menu/Buttons/GoBackToMenu" to="." method="_on_GoBackToMenu_button_down"]
[connection signal="button_up" from="Menu/Buttons/GoBackToMenu" to="." method="_on_GoBackToMenu_button_up"]
[connection signal="fade_finished" from="FadeScreen" to="." method="_on_FadeScreen_fade_finished"]
